Fix 'rolling' alignment on host vitals

--- a/frontend/pages/hosts/details/cards/Vitals/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Vitals/_styles.scss
@@ -81,6 +81,16 @@
     white-space: nowrap;
   }
 
+  &__os-data-set {
+    .component__tooltip-wrapper {
+      margin-left: $pad-xxsmall;
+    }
+
+    .component__tooltip-wrapper__element {
+      line-height: inherit;
+    }
+  }
+
   .text-muted {
     color: $ui-fleet-black-50;
   }
